--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
+    "firebase": "^2.3.1",
     "rc-checkbox": "^1.1.1",
     "react-native": "^0.11.4",
     "react-native-button": "^1.2.1",
     "react-native-checkbox": "^1.0.3",
     "react-native-icons": "^0.5.1",
     "react-native-scrollable-tab-view": "^0.1.10",
-    "react-router": "^1.0.0-rc1"
+    "react-router": "^1.0.0-rc1",
+    "reactfire": "^0.5.1"
   }
 }
